# GTK4-Cairo-Snake-game

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure~  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  libnew.la  new  new.c  snake.c
src/.deps/: new-new.Po
