AC_INIT([new],[1.0],[])
AC_DEFINE(VERSION_TITLE,["RELEASE"],[Release Title])
AC_CONFIG_SRCDIR(config.h.in)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR(.)
AM_INIT_AUTOMAKE()
AC_CONFIG_HEADERS(config.h)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PROG_CC_C_O
LT_INIT([shared disable-static])

PKG_CHECK_MODULES(GTK, gtk4)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

CFLAGS="-g -O2 -Wall \${WERRORFLAG} -Wchar-subscripts -D_GNU_SOURCE -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED -DGTK_DISABLE_DEPRECATED $CFLAGS"

AC_CONFIG_FILES([
	Makefile
	src/Makefile
])

AC_OUTPUT
